Ensure SVGs stretch

--- a/bootcamp_content/projects/style-puzzles/exercises/bootcamp-features/default.css
+++ b/bootcamp_content/projects/style-puzzles/exercises/bootcamp-features/default.css
@@ -5,6 +5,8 @@ body,
         Segoe UI Symbol, Noto Color Emoji;
 
     background: #132f44;
+    height: 100%;
+    width: 100%;
 
     display: grid;
     place-content: center;
