--- a/bootcamp_content/projects/style-puzzles/exercises/love-poured-candles/default.css
+++ b/bootcamp_content/projects/style-puzzles/exercises/love-poured-candles/default.css
@@ -3,4 +3,7 @@ body,
     overflow: hidden;
     font-family: ui-serif, serif, Apple Color Emoji, Segoe UI Emoji,
         Segoe UI Symbol, Noto Color Emoji;
+
+    height: 100%;
+    width: 100%;
 }
